--- a/register.html
+++ b/register.html
@@ -263,14 +263,14 @@
                         <form class="user">
                           <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
-                              <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre">
+                              <input type="text" class="form-control form-control-user" id="nombre" placeholder="Nombre">
                             </div>
                             <div class="col-sm-6">
-                              <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido">
+                              <input type="text" class="form-control form-control-user" id="apellido" placeholder="Apellido">
                             </div>
                           </div>
                           <div class="form-group">
-                            <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Correo electronico">
+                            <input type="email" class="form-control form-control-user" id="email" placeholder="Correo electronico">
                           </div>
                           <div class="form-group row">
                             <div class="col-sm-6 mb-3 mb-sm-0">
@@ -281,34 +281,28 @@
                             </div>
                             </div>
                             <div class="form-group">
-                            <input type="tel" class="form-control form-control-user" id="examplePhoneNumber" placeholder="Número de telefono" pattern="[0-9]{9}">
+                            <input type="tel" class="form-control form-control-user" id="telefono" placeholder="Número de telefono" pattern="[0-9]{9}">
                             </div>
                             <div class="form-group row">
                             <div class="col-sm-6  mb-3 mb-sm-0">
-                                <input type="date" class="form-control form-control-user" id="exampleFechaNacimiento">
+                                <input type="date" class="form-control form-control-user" id="fechaNacimiento">
                                 </div>
                              <div class="col-sm-6">
-                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"  style="width: 100%; height: 100%;">
-                              Departamentos
-                            </button>
-                            <div class="dropdown-menu"  style="width: 100%; text-align: center">
-                              <a class="dropdown-item" href="#">Departamento 1</a>
-                              <a class="dropdown-item" href="#">Departamento 2</a>
-                              <a class="dropdown-item" href="#">Departamento 3</a>
-                            </div>
+                               <select name=select id="departamento" class="btn btn-primary dropdown-toggle" style="width: 100%; height: 100%;">
+                                 <option value="depto1">Departamento 1</option>
+                                 <option value="depto2">Departamento 2</option>
+                                 <option value="depto3">Departamento 3</option>
+                               </select>
                           </div>
                         </div>
                        <br>
                           <div class="form-group row">
                             <div class="col-sm-6  mb-3 mb-sm-0" class="dropdown">
-                              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"  style="width: 100%; height: 50%;">
-                                Localidad
-                              </button> 
-                              <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Localidad 1</a>
-                                <a class="dropdown-item" href="#">Localidad 2</a>
-                                <a class="dropdown-item" href="#">Localidad 3</a>
-                              </div>
+                              <select name=select id="localidad" class="btn btn-primary dropdown-toggle" style="width: 100%; height: 50%;">
+                                  <option value="local1">Localidad 1</option>
+                                  <option value="local2">Localidad 2</option>
+                                  <option value="local3">Localidad 3</option>
+                                </select>
                             </div>
                             <div class="col-sm-6 form-group green-border-focus">
                                 <textarea class="form-control" id="exampleFormControlTextarea5" rows="3"></textarea>
