--- a/registerTask.html
+++ b/registerTask.html
@@ -289,16 +289,11 @@
 
                                                 <div class="form-group row">
                                                     <div class="col-sm-6">
-                                                        <button type="button" class="btn btn-primary dropdown-toggle"
-                                                            data-toggle="dropdown" style="width: 530px; margin-left: 10px">
-                                                            Empleado
-                                                        </button>
-                                                        <div class="dropdown-menu"
-                                                            style="width: 100%; text-align: center">
-                                                            <a class="dropdown-item" href="#">Empleado 1</a>
-                                                            <a class="dropdown-item" href="#">Empleado 2</a>
-                                                            <a class="dropdown-item" href="#">Empleado 3</a>
-                                                        </div>
+                                                        <select name=select id="empleado" class="btn btn-primary dropdown-toggle" style="width: 100%; height: 50%; margin-left: 20px">
+                                                            <option value="empl1">Empleado 1</option>
+                                                                <option value="empl2">Empleado 2</option>
+                                                                <option value="empl3">Empleado 3</option>
+                                                              </select>
                                                     </div>
                                                     <br>
                                                     <br>
