--- a/registerTask.html
+++ b/registerTask.html
@@ -234,18 +234,10 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="userProfile.html">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Perfil
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Configuraciones
-                                </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Actividades realizadas
-                                </a>
+                                </a>   
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -264,6 +256,7 @@
                         <div class="card-body p-0">
                             <!-- Nested Row within Card Body -->
                             <div class="row">
+                                    <div class="col-lg-5 d-none d-lg-block bg-task-image"></div>
                                 <div class="col-lg-7">
                                     <div class="p-5">
                                         <div class="text-center">
@@ -276,10 +269,10 @@
                                             <div class="form-group row">
                                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                                     <input type="text" class="form-control form-control-user"
-                                                        id="exampleTitulo" placeholder="Titulo">
+                                                        id="exampleTitulo" placeholder="Titulo tarea">
                                                 </div>
                                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                                    <textarea style="width: 100%" id="exampleDetallesTarea"
+                                                    <textarea class="form-control" style="height: 50%;" id="exampleDetallesTarea"
                                                         placeholder="Tarea a realizar"></textarea>
                                                 </div>
                                                 <br>
@@ -325,8 +318,8 @@
                                                         <br>
 
                                                     </div>
-
-                                                    <div class="col-sm-6 mb-3 mb-sm-0" style="left: 700px; top: -80px; width: 1000px">
+                                                   
+                                                    <div class="col-sm-6 mb-3 mb-sm-0" style="left: 150px; top: 150px; width: 1000px">
                                                         <a href="login.html" class="btn btn-primary btn-user btn-block">
                                                             Registrar tarea
                                                         </a>
