--- a/index.html
+++ b/index.html
@@ -84,19 +84,20 @@
         </div>
       </li>
 
-      <!-- Nav Item - Utilities Collapse Menu -->
-     <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-          aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Reportes</span>
-        </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Graficar reportes:</h6>
-            <a class="collapse-item" href="charts.html">Graficas</a>
+       <!-- Nav Item - Utilities Collapse Menu -->
+       <li class="nav-item">
+          <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+              aria-expanded="true" aria-controls="collapsePages">
+              <i class="fas fa-fw fa-folder"></i>
+              <span>Reportes</span>
+          </a>
+          <div id="collapsePages" class="collapse" aria-labelledby="headingUtilities"
+              data-parent="#accordionSidebar">
+              <div class="bg-white py-2 collapse-inner rounded">
+                  <h6 class="collapse-header">Graficar reportes:</h6>
+                  <a class="collapse-item" href="charts.html">Graficas</a>
+              </div>
           </div>
-        </div>-->
       </li>
 
     </ul>
